# scorespeak

./: .gitignore  README.md  pyproject.toml
datasets/: ATTRIBUTIONS.md  sources.csv
datasets/long_task_reconstruction/: manifest.json
datasets/precise_edit/: cases.csv
datasets/scores/: beethoven_op125_m1_violin1_bars001-200.musicxml  borodin_string_quartet_no2_bars001-200.musicxml  delius_it_was_a_lover_and_his_lass_bars001-064.musicxml
scorespeak/: __init__.py  core.py  retrieval.py  types.py
scorespeak/agent/: __init__.py  context_renderers.py  defaults.py  graph.py  memory.py  overview.py  prompt_split.py  repl.py  tool_catalog.py  tools.py
scorespeak/editing/: __init__.py  articulations.py  barlines.py  chords.py  dynamics.py  endings.py  expression_common.py  expression_shared.py  expressions.py  grace_notes.py  key_signatures.py  layout.py  lyrics.py  marking_common.py  marking_shared.py  markings.py  measures.py  navigation.py  note_events.py  notes.py  ornaments.py  (+12 more)
tests/: test_agent_memory.py  test_agent_tools.py  test_bar_retrieval.py  test_bar_retrieval_properties.py  test_core.py  test_edge_cases.py  test_expressions.py  test_integration.py  test_layout.py  test_markings.py  test_measures.py  test_notation_extensions_properties.py  test_notes.py  test_parts.py  test_prompt_split.py  test_public_datasets.py  test_retrieval.py  test_retrieval_properties.py  test_signatures.py  test_staff_groups.py  test_validation.py  test_voice.py  test_web_server.py
web/: README.md  app.js  index.html  musicxml_window.py  sample.musicxml  server.py  styles.css
(+42 files in other folders)
